objects/Sales_Bonus_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Field__c</fullName>
        <label>Amount Field</label>
        <metadataRelationshipControllingField>Sales_Bonus_Rule__mdt.Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Sales_Bonus_Rules</relationshipLabel>
        <relationshipName>Sales_Bonus_Rules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Date_Field__c</fullName>
        <label>Date Field</label>
        <metadataRelationshipControllingField>Sales_Bonus_Rule__mdt.Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Sales_Bonus_Rules2</relationshipLabel>
        <relationshipName>Sales_Bonus_Rules2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Sales_Bonus_Rules</relationshipLabel>
        <relationshipName>Sales_Bonus_Rules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <metadataRelationshipControllingField>Sales_Bonus_Rule__mdt.Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Sales_Bonus_Rules1</relationshipLabel>
        <relationshipName>Sales_Bonus_Rules1</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Sales Bonus Rule</label>
    <pluralLabel>Sales Bonus Rules</pluralLabel>
    <validationRules>
        <fullName>Object_Must_Be_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>Object__r.DeveloperName &lt;&gt; &apos;Opportunity&apos;</errorConditionFormula>
        <errorDisplayField>Object__c</errorDisplayField>
        <errorMessage>Object Must Be Opportunity</errorMessage>
    </validationRules>
</CustomObject>